kubernetes_yamls/controller.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-nginx
  namespace: deltacapita
  labels:
    app: ingress-nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ingress-nginx
  template:
    metadata:
      labels:
        app: ingress-nginx
    spec:
      containers:
      - name: controller
        image: k8s.gcr.io/ingress-nginx/controller:v1.9.5
        args:
          - /nginx-ingress-controller
          - --ingress-class=nginx
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
