kubernetes_yamls/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clientapi
  namespace: deltacapita
spec:
  replicas: 2
  selector:
    matchLabels:
      app: clientapi
  template:
    metadata:
      labels:
        app: clientapi
    spec:
      containers:
        - name: clientapi
          image: mitesh-patidar/clientapi:latest
          ports:
             - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: clientapi
  namespace: deltacapita
spec:
  selector:
    app: clientapi
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  type: ClusterIP
