kubernetes_yamls/lb.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller
  namespace: deltacapita
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: ingress-nginx
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  - port: 443
    targetPort: 443
    protocol: TCP
    name: https
