kubernetes_yamls/mongodb.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: deltacapita
  labels:
    app: mongodb
spec:
  ports:
    - port: 27017
      name: mongodb
  clusterIP: None
  selector:
    app: mongodb
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
  namespace: deltacapita
spec:
  selector:
    matchLabels:
      app: mongodb
  serviceName: "mongodb"
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo:6.0
          ports:
            - containerPort: 27017
              name: mongodb
          volumeMounts:
            - name: mongodb-vol
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongodb_vol
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
