kubernetes_yamls/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - clients.api.deltacapita.com
    secretName: client-tls
  rules:
  - host: clients.api.deltacapita.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: clientapi
            port:
              number: 80
